# CineFile

./: .gitignore  .gitmodules  CMakeLists.txt  MovieRecommender.cpp  README.md
.github/workflows/: main.yml
header/: MovieRec.h  MovieScore.h  ScrapeWebsite.h  imdbParser.h  imdbparser.h  moviesDatabase.h
header/database/: MovieRec.h  MovieScore.h  actor.h  director.h  genre.h  movie.h  moviesDatabase.h  person.h
header/interface/: userinterface.h
header/recommender/: MovieRec.h  MovieScore.h
header/webscraping/: ScrapeWebsite.h  imdbParser.h  imdbparser.h
src/: MovieRec.cpp  MovieScore.cpp  ScrapeWebsite.cpp  UserInterface.cpp  formatExample.cpp  imdbParser.cpp  libxml++-5.0.3.tar.xz  main.cpp  movie.cpp  moviesDatabase.cpp
src/PrototypeWebscraper/: webscrape.cpp
src/database/: actor.cpp  director.cpp  genre.cpp  movie.cpp  moviesDatabase.cpp  person.cpp
src/include/: genre.h  imdbparser.h  userinterface.h
src/libxml2-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  libxml-2.0.pc  libxml2-config-version.cmake  libxml2-config.cmake  libxml2-py.c  libxml2.so.2.12.0  libxml2class.py  libxml2class.txt  libxml2mod.so.2.12.0  runsuite  runtest  runxmlconf  setup.py  testModule  testThreads  testapi  testchar  testdict  testlimits  testrecurse  xml2-config  xmlcatalog  xmllint
src/libxml2-build/libxml/: xmlversion.h
tests/: Recommend_tests.h  Recommend_tests.h.gch  ScrapeWebsites_test.h  _unit_tests.cpp  actor_tests.h  director_tests.h  genre_tests.h  imdbParser_tests.h  movie_tests.h  moviesDatabase_tests.h  moviescore_tests.h  person_tests.h
tests/imdbHTML/: action.txt  horror.txt  romance.txt
